# team-project

./: .gitignore  config.yaml  main.go
assets/: index.html
assets/css/: style.css
assets/js/: bundle.js  jquery-table.js  plotly-custom.js  script.js
assets/js/mathjax/: package.json
config/: config.go
cpp/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  f_val.cpp  f_vals.cpp  functions.h  fval  fvals  main.cpp  matrix.cpp  matrix.h  program.cpp  program.h
handlers/: build.go  f-val.go  f-vals.go  handler.go  solve.go
octave/: alg.m
